assign1/tests/parsing/bad/stray-token.c
#include "FenneC.h"

int main() {}

int